[gd_scene load_steps=4 format=3 uid="uid://bptpd7t4mkxfm"]

[ext_resource type="Script" uid="uid://g6k725dwxp4k" path="res://script/ObstacleManager.gd" id="1_ajvb3"]
[ext_resource type="PackedScene" uid="uid://cgb2cyut3gluc" path="res://scene/MusicLatarScene3.tscn" id="2_dqkcp"]
[ext_resource type="AudioStream" uid="uid://demkrfelpqcoe" path="res://asset/music/metronome-85688.mp3" id="3_2bnln"]

[node name="ObstacleManager" type="Node2D"]
texture_filter = 1
script = ExtResource("1_ajvb3")

[node name="MusicLatarScene3" parent="." instance=ExtResource("2_dqkcp")]

[node name="CollisionSpawnTimer" type="Timer" parent="."]

[node name="Tick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2bnln")
volume_db = -10.0
pitch_scale = 1.3

[connection signal="timeout" from="CollisionSpawnTimer" to="." method="_on_collision_spawn_timer_timeout"]
